提交直接内存溢出demo及引用计数问题